# vibe-editor2

./: .gitignore  AGENTS.md  CLAUDE.md  README-ja.md  README.md  SOURCE_REPOSITORY.md  latest.json  node_modules  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_prune_tests.rs  main.rs  state.rs
src-tauri/src/agent_runtime/: adapter.rs  delivery.rs  event.rs  event_buffer.rs  manager.rs  mod.rs  persistence.rs  persistence_tests.rs  phase1_tests.rs  provider_policy.rs  pty_compat.rs  registry.rs
src-tauri/src/agent_runtime/claude_agent/: adapter.rs  client.rs  mod.rs  sidecar_protocol.rs  tests.rs
src-tauri/src/agent_runtime/codex/: adapter.rs  client.rs  convert.rs  handshake.rs  mod.rs  tests.rs
src-tauri/src/commands/: agent_runtime.rs  api_agents.rs  app.rs  atomic_write.rs  authz.rs  dialog.rs  files.rs  fs_watch.rs  git.rs  handoffs.rs  logs.rs  mod.rs  role_profiles.rs  safe_load.rs  schema_version.rs  settings.rs  settings_recovery.rs  team_history.rs  team_presets.rs  team_projection.rs  team_state.rs  terminal.rs  terminal_tabs.rs  terminal_worktree.rs  vibe_team_skill.rs  vibe_team_skill_body.md  voice.rs  worktree.rs
src-tauri/src/commands/agent_runtime/: controls.rs  model_catalog.rs  registration.rs  tests.rs
src-tauri/src/commands/api_agents/: models.rs  providers.rs  session_delete.rs  skills.rs  tests.rs  tools.rs  tools_web.rs  tools_write.rs  types.rs
src-tauri/src/commands/api_agents/providers/: agentic.rs
src-tauri/src/commands/api_agents/skills/: tests.rs
src-tauri/src/commands/app/: updater.rs
src-tauri/src/commands/app/team_mcp/: tests.rs
src-tauri/src/commands/authz/: active_project.rs
src-tauri/src/commands/files/: encoding.rs  hash.rs  image_preview.rs  path_safety.rs
src-tauri/src/commands/handoffs/: list.rs
src-tauri/src/commands/team_history/: list.rs  mutate.rs
src-tauri/src/commands/terminal/: command_validation.rs  prompt_files.rs  shell_policy.rs  write_outcome.rs
src-tauri/src/commands/tests/: git.rs  settings.rs  team_history_authz.rs
src-tauri/src/commands/vibe_team_skill/: secure_install.rs  secure_install_tests.rs  tests.rs
src-tauri/src/commands/worktree/: git_ops.rs  ipc.rs  persistence.rs  queue.rs  review_tests.rs  tests.rs
src-tauri/src/mcp_config/: claude.rs  codex.rs  mod.rs
src-tauri/src/pty/: claude_watcher.rs  codex_app_server.rs  path_norm.rs  registry.rs
src-tauri/src/pty/registry/: lifecycle.rs
src-tauri/src/pty/session/: exit_watcher.rs  handle.rs  mod.rs  recording_test_support.rs  registration.rs  spawn.rs  windows_resolve.rs
src-tauri/src/pty/tests/: mod.rs  session_windows.rs  session_windows_bash.rs
src-tauri/src/team_hub/: bridge.rs  codex_delivery.rs  deliver.rs  events.rs  inbox_watch.rs  inject.rs  mod.rs  provider_policy.rs  redeliver.rs  runtime_cleanup.rs  runtime_endpoint.rs  spool.rs
src-tauri/src/team_hub/app_server/: client.rs  mod.rs  tests.rs  wire.rs
src-tauri/src/team_hub/protocol/: consts.rs  dynamic_role.rs  helpers.rs  mod.rs  role_template.rs  schema.rs
src-tauri/src/team_hub/protocol/tools/: assign_task.rs  create_leader.rs  create_leader_support.rs  diagnostics.rs  dismiss.rs  info.rs  mod.rs  (+7 more)
src-tauri/src/team_hub/runtime_endpoint/: binding.rs  mod.rs  snapshot.rs  test_support.rs  types.rs
src-tauri/src/team_hub/state/: agent_entry.rs  file_locks_glue.rs  hub_state.rs  member_diagnostics.rs  message_flush.rs  message_log.rs  mod.rs  persistence.rs  recruit.rs  recruit_grace.rs  recruit_lifecycle.rs
src-tauri/src/team_hub/tests/: legacy_codex_delivery.rs  mod.rs  phase7_multi_provider.rs  recruit_grace_paths.rs  runtime_delivery.rs  runtime_delivery_errors.rs  runtime_membership.rs
src-tauri/src/util/: config_paths.rs
(+296 files in other folders)
