[package]
name = "vibe-editor"
version = "1.6.2"
description = "Electron→Tauri 移行版 vibe-editor (Claude Code / Codex 専用エディタ)"
authors = ["yusei <yusei@yuseilab.com>"]
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

# --- async / serialization ---
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Issue #79: 以前ここに `toml = "0.8"` / `thiserror = "1"` / `percent-encoding = "2"` が
# 宣言されていたが、ソースのどこからも `use` されていなかったため削除。TOML 出力は
# mcp_config/codex.rs が手組み、エラーは anyhow::Result 一本、URL エンコードは未使用。
# 再度必要になったら個別に足し直すこと。

# --- PTY / TeamHub ---
portable-pty = "0.9"
bytes = "1"
notify = "8"

# --- error / logging ---
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Issue #326: 設定モーダルからログを閲覧できるように、stderr に加えて
# ~/.vibe-editor/logs/vibe-editor.log にも書き出す。non_blocking で I/O を
# 別スレッドへ逃がし、never 戦略 (1 ファイル無回転) でシンプルに保つ。
tracing-appender = "0.2"

# --- misc ---
once_cell = "1"
# Issue #739: AppState.project_root を `std::sync::Mutex<Option<String>>` から
# lock-free な `ArcSwapOption<String>` へ置換し、async コンテキストからの load/store を
# 構造的に deadlock-free にする (Mutex を async task から lock するアンチパターンを排除)。
arc-swap = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
dirs = "6"
which = "8"
whoami = "2"
base64 = "0.22"
rand = "0.8"
# Issue #120: CP932 / Shift_JIS のテキスト decode/encode 用 (Windows 日本語環境互換)
encoding_rs = "0.8"
# Issue #119: open 時のコンテンツハッシュで「同サイズ・1秒以内」の外部変更を検出する用
sha2 = "0.11"
# Issue #592: ファイルツリー右クリック削除を OS のゴミ箱経由 (Windows: Recycle Bin /
# macOS: Trash / Linux: XDG ゴミ箱) で行うため。完全削除は std::fs に倒す。
trash = "5"

# Issue #603 (Security): team-hub の handshake で peer credential (UID / SID) を検証する。
# token 盗難 (env 経由で /proc/<pid>/environ から漏洩) を「同 user 内のローカルプロセス」
# 越境に閉じ込めるため、Unix では SO_PEERCRED / getpeereid、Windows では
# GetNamedPipeClientProcessId + OpenProcessToken + GetTokenInformation で peer SID を比較する。
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["socket", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
# Issue #494: integration test 用に tempfile を導入。fixture 用の tempdir を作成し、
# `~/.vibe-editor/settings.json` / `~/.claude/projects/<encoded>/*.jsonl` /
# git fixture repo を tempdir 配下にスタブする。
tempfile = "3"
# `Result` の `Err` variant を assert する際に backtrace 付きで panic させる用。
# 旧 `assert_matches!` (nightly) の安定版代替。
assert_matches = "1"

[features]
# デフォルトで dev tools 有効
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Issue #342 Phase 2: `team_read` の旧 raw `to` 再解釈経路を残すための staging hotfix flag。
# `TeamMessage.resolved_recipient_ids` が空 (= 旧 push の残骸) なメッセージに限り、
# raw `to` を読み手 ctx で再マッチする旧挙動を復活させる。staging で 1 週間
# `inconsistent: true` のログ無し / 既存テストグリーンを確認できたら削除予定。
# `cargo test --features legacy_message_fallback` 用。
legacy_message_fallback = []

[lib]
name = "vibe_editor_lib"
# rlib は desktop バイナリ (src/main.rs の vibe_editor_lib::run()) が lib を Rust
# クレートとしてリンクするのに必須 (staticlib/cdylib は mobile 用の C 成果物で
# Rust クレートとして消費できない)。削除すると desktop ビルドが壊れる (#779)。
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vibe-editor"
path = "src/main.rs"
